second solution of the task after ai review.