@@ -12,20 +12,19 @@ public class WorkWithFile {
         String importantSymbol = ",";
         int operationTypeIndex = 0;
         int amountIndex = 1;
-        int arraysTheoryMaxSize = 10;
-        int realSize = 0;
-        String[] type = new String[arraysTheoryMaxSize];
-        int[] amount = new int[arraysTheoryMaxSize];
+        int arraysSize = 3;
+        int resultIndex = 2;
+        String[] type = new String[arraysSize];
+        int[] amount = new int[arraysSize];
 
         try (BufferedReader reader = new BufferedReader(new FileReader(fromFileName))) {
             String value = reader.readLine();
             while (value != null) {
                 String[] values = value.split(importantSymbol);
-                for (int i = 0; i < arraysTheoryMaxSize; i++) {
+                for (int i = 0; i < arraysSize; i++) {
                     if (type[i] == null && values[operationTypeIndex] != null) {
                         type[i] = values[operationTypeIndex];
                         amount[i] += Integer.parseInt(values[amountIndex]);
-                        realSize = i + 1;
                         break;
                     }
                     if (type[i] != null && type[i].equals(values[operationTypeIndex])) {
@@ -34,12 +33,14 @@ public class WorkWithFile {
                     }
                 }
                 value = reader.readLine();
+                type[resultIndex] = "result";
+                amount[resultIndex] = Math.abs(amount[resultIndex - 1] - amount[resultIndex - 2]);
             }
         } catch (IOException e) {
-            throw new RuntimeException("canot read from file", e);
+            throw new RuntimeException("cannot read from file", e);
         }
 
-        for (int i = 0; i < realSize - 1; i++) {
+        for (int i = 0; i < arraysSize - 1; i++) {
             if (amount[i] < amount[i + 1]) {
                 int amountArg = amount[i];
                 amount[i] = amount[i + 1];
@@ -50,20 +51,15 @@ public class WorkWithFile {
             }
         }
 
-        for (int i = 0; i < realSize; i++) {
+        for (int i = 0; i < arraysSize; i++) {
             results.append(type[i]).append(',').append(amount[i]).append(System.lineSeparator());
         }
-        results.append("result,").append(amount[0] - amount[1]);
-
-        String[] result = new String[]{String.valueOf(results)};
 
         File file = new File(toFileName);
-        for (String value : result) {
-            try {
-                Files.write(file.toPath(), value.getBytes());
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
+        try {
+            Files.writeString(file.toPath(), results);
+        } catch (IOException e) {
+            throw new RuntimeException("cannot write to file", e);
         }
     }
 }
